feat: добавлены графики
